# telescope-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  test_camera_quick.py
.github/chatmodes/: Session Tracked Agent.chatmode.md
.github/instructions/: project.instructions.md  session_tracking.instructions.md  telescope-mcp.instructions.md
.github/prompts/: analyze_source.prompt.md  analyze_tests.prompt.md  architecture-doc.prompt.md  code-review.prompt.md
arduino/telescope_sensors/: telescope_sensors.ino
docs/: PROJECT_PLAN.md
docs/architecture/: cameras.md  data-storage.md  sensor-calibration.md
docs/journal/: 2025-12-13.md
docs/procedures/: focusing-main-camera.md
notebooks/: arduino-nano-ble33-sense-upload.ipynb  arduino-nano-ble33-sense.ipynb  asdf_viewer.ipynb  astrophotography_camera_exposure_times.ipynb  debug_single_frame.py  debug_single_frame_ota.py  motor-control-setup.ipynb  motor-control-test.ipynb  motor-control.ipynb  test_asi_driver.ipynb  test_camera_integration.ipynb
src/telescope_mcp/: README.md  __init__.py  cli.py  server.py
src/telescope_mcp/data/: README.md  __init__.py  session.py  session_manager.py
src/telescope_mcp/devices/: README.md  __init__.py  camera.py  camera_controller.py  camera_registry.py  controller.py  coordinate_provider.py  motor.py  registry.py  sensor.py
src/telescope_mcp/drivers/: README.md  __init__.py  config.py  serial.py
src/telescope_mcp/drivers/asi_sdk/: __init__.py
src/telescope_mcp/drivers/cameras/: README.md  __init__.py  asi.py  stub.py  twin.py
src/telescope_mcp/drivers/motors/: __init__.py  serial_controller.py  twin.py  types.py
src/telescope_mcp/drivers/pyasi/: __init__.py
src/telescope_mcp/drivers/sensors/: README.md  __init__.py  arduino.py  arduino.py,cover  twin.py  types.py
src/telescope_mcp/observability/: README.md  __init__.py  logging.py  stats.py
src/telescope_mcp/tools/: README.md  __init__.py  cameras.py  motors.py  position.py  sessions.py
src/telescope_mcp/utils/: README.md  __init__.py  coordinates.py  image.py
src/telescope_mcp/web/: README.md  __init__.py  app.py
src/telescope_mcp/web/static/css/: dashboard.css
src/telescope_mcp/web/static/js/: dashboard.js
src/telescope_mcp/web/templates/: dashboard.html
tests/: README.md  __init__.py  conftest.py  helpers.py  test_camera_edge_cases.py  test_cli.py  test_config.py  test_config_comprehensive.py  test_coordinate_provider.py  test_coverage_gaps.py  test_data.py  test_data_session.py  test_data_session_manager.py  test_devices_exports.py  test_devices_extended.py  test_devices_motor.py  test_drivers.py  test_logging_comprehensive.py  test_logging_reset.py  test_observability.py  test_protocol_compliance.py  test_sensor.py  test_server_comprehensive.py  test_server_coverage.py  test_sessions.py  test_sessions_extended.py  test_sessions_mcp_integration.py  test_tools.py  test_tools_cameras.py  test_tools_sessions.py  test_utils_coordinates.py  test_utils_image.py  test_utils_init.py  test_web_app.py
tests/drivers/: test_asi_sdk.py
tests/drivers/cameras/: __init__.py  test_asi.py  test_twin.py
tests/drivers/motors/: test_serial_controller.py  test_twin_motor.py
tests/drivers/sensors/: test_arduino.py  test_twin.py  test_types.py
utils/: README.md  analyze_all_source.py  analyze_all_tests.py  analyze_mcp_overhead.py  create_issues.py
