[project]
name = "telescope-mcp"
version = "0.1.0"
description = "MCP server + Web dashboard for telescope control (cameras, motors, sensors)"
authors = [
    {name = "mgrandau", email = "mgrandau@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30",
    "numpy>=2.2.6",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "zwoasi>=0.2.0",
    "asdf>=3.0.0",
    "websockets>=14.0",
    "opencv-python-headless>=4.12.0.88",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
    "pytest-cov>=7.0.0",
    "bandit[toml]>=1.8.2",
    "pre-commit>=4.0.1",
    "ai-session-tracker-mcp @ git+https://github.com/mgrandau/ai-session-tracker-mcp.git",
    "docscope-mcp @ git+https://github.com/mgrandau/docscope-mcp.git",
    "ipykernel>=7.1.0",
    "json5>=0.12.1",
    "types-pyserial>=3.5.0.20251001",
]
build = [
    "cython>=3.0.0",
    "setuptools>=75.0.0",
]

[project.scripts]
telescope-mcp = "telescope_mcp.server:main"
telescope-web = "telescope_mcp.web.app:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/telescope_mcp"]
package-dir = "src"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Allow unused variables in tests (often testing side effects)
"tests/*" = ["F841"]

[tool.mypy]
python_version = "3.12"
strict = true
# Allow some flexibility for third-party libraries and complex patterns
warn_return_any = false
disallow_untyped_decorators = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "zwoasi.*",
    "cv2.*",
    "asdf.*",
    "uvicorn.*",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "telescope_mcp.observability.logging"
# Custom logger with kwargs support has intentional signature difference
disable_error_code = ["override", "arg-type"]

[[tool.mypy.overrides]]
module = "telescope_mcp.web.app"
# Web app has many FastAPI decorators that mypy struggles with
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "telescope_mcp.drivers.cameras.twin",
    "telescope_mcp.drivers.cameras.asi",
    "telescope_mcp.devices.camera",
    "telescope_mcp.devices.registry",
    "telescope_mcp.server",
    "telescope_mcp.tools.*",
]
# These modules use StructuredLogger with keyword args and MCP decorators
disable_error_code = ["call-arg", "no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov-report=term-missing --no-cov-on-fail"
filterwarnings = [
    # Suppress orphan coroutine warnings from AsyncMock cleanup in tests
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["telescope_mcp"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # Hardware SDK wrapper - untestable without real hardware
    "class _ASISDKWrapper",
    "def init\\(self, library_path",
    "def get_num_cameras\\(self\\)",
    "def list_cameras\\(self\\)",
    "def open_camera\\(self, camera_id",
    # SDK initialization success path - requires real SDK library
    "self._sdk_initialized = True",
    'logger.info.*ASI SDK initialized',
]

# =============================================================================
# Bandit - Security scanner configuration
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "notebooks"]
# B101: assert warnings (used in tests)
# B104: bind to 0.0.0.0 (intentional for telescope web dashboard - LAN access)
# B110: try/except/pass (used for best-effort cleanup)
skips = ["B101", "B104", "B110"]
